scrollbars.css
/* line 2, ../sass/scrollbars.scss */
.iScroll ::-webkit-scrollbar, .iScroll::-webkit-scrollbar { width: 6px; height: 9px; }

/* line 9, ../sass/scrollbars.scss */
.iScroll ::-webkit-scrollbar-button:start:decrement, .iScroll ::-webkit-scrollbar-button:end:increment, .iScroll::-webkit-scrollbar-button:start:decrement, .iScroll::-webkit-scrollbar-button:end:increment { display: block; height: 0; background-color: transparent; }

/* line 15, ../sass/scrollbars.scss */
.iScroll ::-webkit-scrollbar-track-piece, .iScroll::-webkit-scrollbar-track-piece { margin: 10px 0; -webkit-border-radius: 0; -webkit-border-bottom-right-radius: 4px; -webkit-border-bottom-left-radius: 4px; }

/* line 22, ../sass/scrollbars.scss */
.iScroll ::-webkit-scrollbar-thumb:vertical, .iScroll::-webkit-scrollbar-thumb:vertical { height: 50px; background-color: rgba(0, 0, 0, 0.12); -webkit-border-radius: 4px; }

/* line 28, ../sass/scrollbars.scss */
.iScroll ::-webkit-scrollbar-thumb:horizontal, .iScroll::-webkit-scrollbar-thumb:horizontal { width: 50px; background-color: rgba(0, 0, 0, 0.12); -webkit-border-radius: 4px; }

/* line 36, ../sass/scrollbars.scss */
#treecontainer .iScroll ::-webkit-scrollbar-thumb:vertical, #treecontainer .iScroll::-webkit-scrollbar-thumb:vertical { height: 50px; background-color: rgba(0, 0, 0, 0.06); -webkit-border-radius: 4px; }

